<resources>
    <string name="app_name">MarsExplorer</string>
    <string name="title_main">Main</string>
    <string name="title_map">Map</string>
    <string name="show_image">Show image</string>
    <string name="text_hint">Используйте жесты,\nчтобы приблизить/отдалить</string>
    <string name="text_go_back">Нажмите кнопку,\nчтобы вернуться назад</string>
    <string name="text_share">Нажмите кнопку,\nчтобы поделиться</string>
    <string name="network_off">Отсутсвует подключение\n к интернету</string>
    <string name="repeat">Повторить</string>
    <string name="share_link">Поделиться ссылкой с помощью</string>
    <string name="marker_name">Marker name</string>
    <string name="longitude">Longitude:</string>
    <string name="wight">Wight:</string>
    <string name="latitude">Latitude</string>
    <string name="save_btn">save</string>
    <string name="cancel_btn">cancel</string>
    <string name="choose_landscape">Тип ландшафта</string>
    <string name="shema">Схема</string>
    <string name="satellite">Спутник</string>
    <string name="hybrid">Гибрид</string>

</resources>