<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:background="@color/black_300"
        android:layout_height="@dimen/card_coordinate_height">

        <TextView
            android:id="@+id/marker_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_normal"
            android:paddingHorizontal="@dimen/margin_double"
            android:text="@string/marker_name"
            android:textColor="@color/white"
            android:textSize="@dimen/middle_text_size"
            app:layout_constraintTop_toTopOf="parent" />


        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_double"
            android:orientation="horizontal"
            app:layout_constraintEnd_toStartOf="@+id/delete_marker"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/marker_name">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_double"
                android:text="@string/longitude"
                android:textColor="@color/white"
                android:textSize="@dimen/card_text_subtitle_size" />

            <TextView
                android:id="@+id/longitude"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="@dimen/card_text_subtitle_size"
                tools:text="99999999999" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/linearLayout_second"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_normal"
            android:orientation="horizontal"
            app:layout_constraintEnd_toStartOf="@+id/delete_marker"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linearLayout">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_double"
                android:text="@string/latitude"
                android:textColor="@color/white"
                android:textSize="@dimen/card_text_subtitle_size" />

            <TextView
                android:id="@+id/latitude"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="@dimen/card_text_subtitle_size"
                tools:text="99999999999" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/divider_height"
            android:background="@drawable/gradient"
            app:layout_constraintBottom_toBottomOf="parent" />

        <ImageView
            android:id="@+id/delete_marker"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:clickable="true"
            android:focusable="true"
            android:background="?attr/selectableItemBackground"
            android:layout_marginEnd="@dimen/margin_double"
            android:src="@drawable/ic_cross_32"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>